# DiplomAPI

./: .gitignore  LICENSE  README.md
C#Wrapper/: .editorconfig  APIWrapper.cs  C#Wrapper.csproj  C#Wrapper.sln  Program.cs
C#Wrapper/Arrays/: Flat2DByte.cs  Flat2DByteSafe.cs  Flat2DFloat.cs  HeightMap.cs
C++DLL/: AlignedAllocator.ixx  C++DLL.cpp  C++DLL.sln  C++DLL.vcxproj  C++DLL.vcxproj.filters  C++DiplomAPI.cpp  C++DiplomAPI.slnx  C++DiplomAPI.vcxproj  C++DiplomAPI.vcxproj.filters  CaveGenerator.cpp  CaveGenerator.h  ExternDLL.cpp  ExternDLL.h  Flat2DBool.cpp  Flat2DBool.h  Flat2DByte.cpp  Flat2DByte.h  Flat2DFloat.cpp  Flat2DFloat.h  FlatArray.natvis  HeightMap.cpp  HeightMap.h  SseHelper.ixx  Useful.h  copyDLL.bat  cpp.hint  resource.h  чтобы копировать DLL в C# обёртку.txt
C++DLL/ForBenchmarks/: Benchmark.hpp  CG_base.cpp  CG_base.hpp  CG_std_vector.cpp  CG_std_vector.hpp  CG_std_vector_for.cpp  CG_std_vector_for.hpp  CG_std_vector_sse.cpp  CG_std_vector_sse.hpp  CV_base.cpp  CV_base.h  CV_base_alt_sum.cpp  CV_base_alt_sum.h  CV_base_alt_sum.hpp  CV_mt_wMTc.cpp  CV_mt_wMTc.h  CV_mt_wMTc_alt_sum.cpp  CV_mt_wMTc_alt_sum.h  CV_mt_wMTc_alt_sum.hpp  CV_mt_woMTC.cpp  CV_mt_woMTC.h  nanobench.h
C++DLL/ForBenchmarks/Flat/: CG_flat_sse.cpp  CG_flat_sse.hpp  CG_flat_sum.cpp  CG_flat_sum.hpp
C++DLL/Tests/: Tests.hpp
C++DLL/src/: Useful.h
C++DLL/src/cave_generator/: CaveGenerator.cpp  CaveGenerator.hpp
C++DLL/src/flat_array/: FlatArray.hpp
C++DLL/src/modules/: FlatArray.ixx  ModuledMatrix.ixx  ProcessorInfo.ixx  SharedMemoryHelper.ixx  Useful.ixx
SharedMemory/: SharedMemory.cpp  SharedMemory.slnx  SharedMemory.vcxproj  SharedMemory.vcxproj.filters  resource.h
SomeBenchmarks/: !bench.csv  AlignedAllocator.ixx  AvxFilter.ixx  Benchmark.ixx  CMakeLists.txt  FlatArray.ixx  FlatArray.natvis  SharedMemoryHelper.ixx  SomeBenchmarks.sln  SomeBenchmarks.slnx  SomeBenchmarks.vcxproj  SomeBenchmarks.vcxproj.filters  avx.ixx  avxHorizontal.ixx  avx_horizontal.ixx  benchmarkFilterRealizations.ixx  benchmarkSumRealizations.ixx  bitsetBuffered.ixx  bitsetFilter.ixx  bufferedRule.ixx  cpuinf.ixx  isItWorkingPlayground.ixx  iter.ixx  iterSum.ixx  masksCreator.ixx  normalOptimized.ixx  normalRule.ixx  normalsum.ixx  random.ixx  sse.ixx  sseFilter.ixx  sseHelper.ixx  sseHorizontal.ixx  sseVertical.ixx  sse_horizontal.ixx  sse_vertical.ixx  sumFilterBase.ixx  sumRealizationBase.ixx  sumWithoutMemAlloc.ixx  test.cpp  (+3 more)
